clickthough from splash page to contents

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ cssclass: homepage
 <div class='hero-unit'>
   <img src='{{relative}}assets/logo.png'>
   <h1>code61</h1>
-  <p>Open-source Coding Workshops</p>
+	<a href = "/contents/"><p>Open-source Coding Workshops</p></a>
 </div>
